# corel-nesting

./: CMakeLists.txt  CorelNestingEngine.cpp  CorelNestingEngine.def  CorelNestingEngine.h  README_BUILD.md  build_windows.bat
.github/workflows/: build-dll.yml
